# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1069 2009/11/23 12:04:31 mn Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2009/11/18) Added database check and mail configuration steps
    to the web installer.
 - (2009/11/12) Fixed bug#4509 - Notification (event based) comments are not
    saved.
 - (2009/11/11) Added feature/config option (Ticket::SubjectFormat) for subject
    format.
     o 'Left'  means '[TicketHook#:12345] Some Subject',
     o 'Right' means 'Some Subject [TicketHook#:12345]',
     o 'None'  means 'Some Subject' (without any ticket number ins subject).

    In the last case you should enable PostmasterFollowupSearchInRaw or
    PostmasterFollowUpSearchInReferences to recognize followups based on email
    headers and/or body.
    Wrote also unit tests to take care of functionality.
 - (2009/11/11) Moved from prototype js to jQuery
    (removed var/httpd/htdocs/js/prototype.js added
    var/httpd/htdocs/js/jquery-1.3.2.min.js).
 - (2009/11/03) Renamed some files in the bin/ directory
    CheckSum.pl                     ->  otrs.CheckSum.pl
    CleanUp.pl                      ->  otrs.CleanUp.pl
    Cron4Win32.pl                   ->  otrs.Cron4Win32.pl
    CryptPassword.pl                ->  otrs.CryptPassword.pl
    DeleteSessionIDs.pl             ->  otrs.DeleteSessionIDs.pl
    GenericAgent.pl                 ->  otrs.GenericAgent.pl
    mkStats.pl                      ->  otrs.mkStats.pl
    otrs.addGroup                   ->  otrs.addGroup.pl
    otrs.addQueue                   ->  otrs.addQueue.pl
    otrs.addRole                    ->  otrs.addRole.pl
    otrs.addRole2Group              ->  otrs.addRole2Group.pl
    otrs.addUser                    ->  otrs.addUser.pl